# SolicitaMarketing

./: .gitignore  .thumbnail  CentraldeSolicitações.dc.html  spec.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db_utils.py  main.py
backend/app/core/: capacity.py  constants.py  dates.py  scoring.py  viability.py
backend/app/emails/: templates.py
backend/app/routers/: auth_me.py  calendar.py  dashboard.py  holidays.py  queue.py  reports.py  request_comments.py  request_files.py  request_types.py  requests.py  weekly_capacities.py
backend/app/schemas/: auth.py  comments.py  files.py  holidays.py  reports.py  request_types.py  requests.py  weekly_capacities.py
backend/app/services/: email_service.py  request_service.py  storage_service.py  viability_service.py
backend/scripts/: seed_admin_users.py  update_admin_credentials.py
backend/tests/unit/: test_capacity.py  test_dates.py  test_scoring.py  test_viability.py
frontend/: .dockerignore  .env.local.example  .env.production  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx
frontend/components/: capacity-bar.tsx  gradient-hero.tsx  kpi-card.tsx  monthly-trend-chart.tsx  priority-badge.tsx  sidebar.tsx  status-badge.tsx  status-donut.tsx  viability-badge.tsx
frontend/lib/: api.ts  types.ts
supabase/migrations/: 0001_schema.sql  0002_indexes.sql  0003_rls_policies.sql  (+5 more)
uploads/: Projeto da central de solicitações ao marketing da VendaMais.docx
(+14 files in other folders)
